chore: update goreleaser

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -18,9 +18,9 @@ checksum:
   name_template: 'checksums.txt'
 
 dockers:
-  dockerfile: Dockerfile
-  image_templates:
-    - "vitech-team/{{.ProjectName}}:{{ .Tag }}"
+  - dockerfile: Dockerfile
+    image_templates:
+      - "vitech-team/{{.ProjectName}}:{{ .Tag }}"
 
 snapshot:
   name_template: "{{ .Tag }}-next"
