--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -20,7 +20,7 @@ checksum:
 dockers:
   - dockerfile: Dockerfile
     image_templates:
-      - "vitech-team/{{.ProjectName}}:{{ .Tag }}"
+      - "ghcr.io/vitech-team/{{.ProjectName}}:{{ .Tag }}"
 
 snapshot:
   name_template: "{{ .Tag }}-next"
