--- a/.github/workflows/goreleaser.yml
+++ b/.github/workflows/goreleaser.yml
@@ -28,3 +28,4 @@ jobs:
           args: release --rm-dist
         env:
           GITHUB_TOKEN: ${{ secrets.GO_RELEASER_TOKEN }}
+          GORELEASER_GITHUB_TOKEN: ${{ secrets.GO_RELEASER_TOKEN }}
