--- a/.github/workflows/goreleaser.yml
+++ b/.github/workflows/goreleaser.yml
@@ -21,6 +21,14 @@ jobs:
         with:
           go-version: 1.16
       -
+        name: Docker Login
+        if: startsWith(github.ref, 'refs/tags/v')
+        env:
+          GITHUB_TOKEN: ${{ secrets.GO_RELEASER_TOKEN }}
+        run: |
+          echo "${GITHUB_TOKEN}" | docker login ghcr.io --username $GITHUB_ACTOR --password-stdin
+          echo "${GITHUB_TOKEN}" | docker login docker.pkg.github.com --username $GITHUB_ACTOR --password-stdin
+      -
         name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v2
         with:
