111: Refactored topology release-notes on topology release

--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -3,6 +3,7 @@
 # It should be run by config/default
 resources:
 - bases/largetest.vitechteam.com_largetestexecutions.yaml
+- bases/topologyrelease.vitechteam.com_topologyrelease.yaml
 # +kubebuilder:scaffold:crdkustomizeresource
 
 patchesStrategicMerge: []
